Capa datos y recursos

--- a/Proyecto/Proyecto.csproj
+++ b/Proyecto/Proyecto.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -83,10 +84,6 @@
     <Content Include="image\Piso 1.png" />
     <Content Include="image\Piso 2.png" />
     <Content Include="image\Vehiculo.png" />
-    <Content Include="Properties\Piso 1.png" />
-    <Content Include="Properties\Piso 2.png" />
-    <Content Include="Properties\Vehiculo.png" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
